--- a/login.html
+++ b/login.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./src/styles/style-login.css">
   <title>m2-entrega-blog-m2</title>
 </head>
 <body>
   <main>
     <form>
-      <h1>bem vindo! por favor faça seu login</h1>
-      <label for="email">Email</label>
-      <input name="email" id="emailInput" type="text" placeholder="digite seu email">
-      <label for="password">Senha</label>
-      <input name="password" id="passwordInput" type="text" placeholder="*******">
-      <button id="btnLogin" type="submit">Entrar</button>
-      <p>ainda não é cadastrado? <span>clique aqui</span></p>
+      <h1>ENTRAR</h1>
+        <label for="email"></label>
+        <input name="email" id="emailInput" type="text" placeholder="Email">
+        <label for="password"></label>
+        <input name="password" id="passwordInput" type="text" placeholder="*******">
+        <button id="btnLogin" type="submit">ENTRAR</button>
     </form>
   <script type="module" src="./src/JS/requests.js"></script>
   <script type="module" src="./src/JS/scripts.js"></script>
